--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
@@ -25,6 +26,7 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.8.11",
     "morgan": "^1.9.1",
+    "swagger-ui-express": "^4.1.3",
     "uuid": "^3.4.0"
   }
 }
