--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.8.11",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.4.3",
     "swagger-ui-express": "^4.1.3",
     "uuid": "^3.4.0"
   }
